--- a/om-env-kako/templates/default/kako.service.erb
+++ b/om-env-kako/templates/default/kako.service.erb
@@ -6,7 +6,7 @@ After=syslog.target
 Type=simple
 User=<%= @user %>
 WorkingDirectory=<%= @dir %>
-ExecStart=/usr/bin/env python2.7 <%= @script %>
+ExecStart=<%= @script %>
 StandardOutput=syslog
 StandardError=syslog
 
