Patch-ups for UTF-8 in Py3.

--- a/om-env-kako/templates/default/kako.service.erb
+++ b/om-env-kako/templates/default/kako.service.erb
@@ -4,6 +4,8 @@ After=syslog.target
 
 [Service]
 Type=simple
+Environment=LC_ALL=C.UTF-8
+Environment=LANG=C.UTF-8
 User=<%= @user %>
 WorkingDirectory=<%= @dir %>
 ExecStart=<%= @script %>
